# MicrochipSmartHub

./: .gitignore  CMakeLists.txt  README.md  http_client.cpp  http_client.h  main.cpp  rpi-cmake.cmake  rpi-linux.cmake  smart_hub_manager.cpp  smart_hub_manager.h
Documents/: ClassDiagrams.wsd  Sequence.wsd  default_settings.json
SmartHub/: CMakeLists.txt  README.md  global.h  http_client.cpp  http_client.h  http_server.cpp  http_server.h  hub_controller.cpp  hub_controller.h  hub_controller_i2c.cpp  hub_controller_i2c.h  hub_controller_usb.cpp  hub_controller_usb.h  hub_manager.cpp  hub_manager.h  hub_settings.cpp  hub_settings.h  i2c_smart_hub_manager.cpp  i2c_smart_hub_manager.h  main.cpp  port_usb.cpp  port_usb.h  smart_hub_manager.cpp  smart_hub_manager.h  smart_hub_regs.h  usb_smart_hub_manager.cpp  usb_smart_hub_manager.h  utility.h
SmartHub/log/: logger.cpp
TestServer/: CMakeLists.txt  https_test_server.h  main.cpp
log/: logger.cpp  logger.h
scripts/: README.md  downstream.py  flexconnect.py  readhub.py  resethub.py  runhub.py  smarthub.py  testhub.py
